trying to fix app updates on refresh stuck on checking for updates

--- a/src/pages/Settings/pages/AppUpdates/NewUpdate/NewUpdate.module.css
+++ b/src/pages/Settings/pages/AppUpdates/NewUpdate/NewUpdate.module.css
@@ -88,3 +88,7 @@
 .abortButtonWrapper{
   margin-top: 20px;
 }
+
+.abortDownloadButton{
+  background-color: rgb(210, 49, 71);
+}
